[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.package]
edition = "2021"
rust-version = "1.86"

[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
incremental = false

# Enable logs for local debugging
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
